tests/ui/dst/dst-bad-deep-2.stderr
error[E0277]: the size for values of type `[isize]` cannot be known at compilation time
  --> $DIR/dst-bad-deep-2.rs:11:30
   |
LL |     let h: &(([isize],),) = &(*g,);
   |                              ^^^^^ doesn't have a size known at compile-time
   |
   = help: within `(([isize],),)`, the trait `Sized` is not implemented for `[isize]`
   = note: required because it appears within the type `([isize],)`
   = note: required because it appears within the type `(([isize],),)`
   = note: tuples must have a statically known size to be initialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
